tests/baselines/reference/inferTypesInvalidExtendsDeclaration.errors.txt
tests/cases/conformance/types/conditional/inferTypesInvalidExtendsDeclaration.ts(1,42): error TS2304: Cannot find name 'B'.
tests/cases/conformance/types/conditional/inferTypesInvalidExtendsDeclaration.ts(1,42): error TS4085: Extends clause for inferred type 'A' has or is using private name 'B'.


==== tests/cases/conformance/types/conditional/inferTypesInvalidExtendsDeclaration.ts (2 errors) ====
    type Test<T> = T extends infer A extends B ? number : string;
                                             ~
!!! error TS2304: Cannot find name 'B'.
                                             ~
!!! error TS4085: Extends clause for inferred type 'A' has or is using private name 'B'.
    